# ProcessExplorer-QT---C-MacOS-Windows

./: .gitignore  CMakeLists.txt  README.md
UI/: Clicker.cpp  Clicker.hpp  MainWindow.cpp  MainWindow.hpp
macOS/: CMakeLists.txt  ProcessControler.cpp  ProcessControler.hpp  ProcessExplorer.cpp  ProcessExplorer.hpp  ProcessUnit.cpp  ProcessUnit.hpp  main.cpp
